Update plugins, TS to 4.0, Tailwind to 1.8

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
 	<script defer src="build/bundle.js"></script>
 </head>
 
-<body>
+<body class="text-gray-800 bg-white dark:text-white dark:bg-gray-800">
 </body>
 </html>
